--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/local-notifications": "^6.1.1",
+    "@capacitor/push-notifications": "^6.0.3",
     "@capacitor/status-bar": "5.0.7",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@fortawesome/fontawesome-free": "^6.5.2",
